# Fantasy_Maps

./: .gitignore  CLAIMS.md  HYPOTHESES.md  README.md  REPRODUCING.md  pyproject.toml
configs/: generation.yaml  train_smoke.yaml  train_sweep.yaml  train_sweep_128.yaml  train_tcvae_64.yaml  train_vae256.yaml  train_vae256_full.yaml  train_vaegan_128.yaml  train_vaegan_128_v2.yaml
notebooks/: 00_review_walkthrough.ipynb  01_data_engine.ipynb  03_disentanglement.ipynb
report/: SUMMARY_FOR_REVIEW.md  demo.html  report.md
results/: MANIFEST.sha256  dataset_summary.json  stage3_metrics.json  stage3_verdicts.json  tcvae_comparison.json
results/checkpoints/: MANIFEST.sha256  PROVENANCE.md  beta1.0_seed0_128px.json  beta1.0_seed0_256px.json  beta1.0_seed0_256px.pt  beta1.0_seed0_64px.json  beta1.0_seed1_128px.json  beta1.0_seed1_64px.json  beta1.0_seed2_128px.json  beta1.0_seed2_64px.json  beta2.0_seed0_128px.json  beta2.0_seed0_64px.json  beta2.0_seed1_128px.json  beta2.0_seed1_64px.json  beta2.0_seed2_128px.json  beta2.0_seed2_64px.json  beta4.0_seed0_128px.json  beta4.0_seed0_64px.json  beta4.0_seed1_128px.json  beta4.0_seed1_64px.json  beta4.0_seed2_128px.json  beta4.0_seed2_64px.json  pca_16d_128px.npz  (+20 more)
scripts/: adjudicate.py  build_demo.py  build_demo_web.py  build_manifest.py  build_snapshot.py  compare_all.py  compare_resolutions.py  compare_tcvae.py  feasibility_probe.py  pack_dataset.sh  plot_headline.py  run_bulk.sh  run_sweep.sh  setup_vast.sh
tests/: test_dataset.py  test_factors.py  test_generation.py  test_metrics.py  test_models.py  test_splits.py
(+11 files in other folders)
